[project]
name = "meraki-ansible"
version = "0.1.0"
description = ""
authors = [
    {name = "Freitas",email = "contato@rodrigo-freitas.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.4,<10.0.0)",
    "ansible (>=13.4.0,<14.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
